--- a/.github/workflows/test-linux-rpm-free-arm64.yml
+++ b/.github/workflows/test-linux-rpm-free-arm64.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-22.04-arm
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - uses: actions/setup-java@v4
         with:
