--- a/.github/workflows/test-linux-rpm-free.yml
+++ b/.github/workflows/test-linux-rpm-free.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
