--- a/.github/workflows/test-linux-snapcraft-free.yml
+++ b/.github/workflows/test-linux-snapcraft-free.yml
@@ -14,6 +14,8 @@ jobs:
       LXD_GROUP: lxd
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Setup LXD
         uses: canonical/setup-lxd@v0.1.3
