--- a/.github/workflows/test-windows-exe-pro-arm64.yml
+++ b/.github/workflows/test-windows-exe-pro-arm64.yml
@@ -14,6 +14,8 @@ jobs:
       Platform: arm64
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Setup Flutter
         shell: pwsh
