--- a/.github/workflows/test-windows-portable-action.yml
+++ b/.github/workflows/test-windows-portable-action.yml
@@ -16,6 +16,8 @@ jobs:
       build_number: ${{ steps.version_step.outputs.build_number }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Set version
         id: version_step
@@ -42,6 +44,8 @@ jobs:
       - get-version
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
