--- a/.github/workflows/test-windows-zip-pro.yml
+++ b/.github/workflows/test-windows-zip-pro.yml
@@ -14,6 +14,8 @@ jobs:
       Platform: x64
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
