--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugins"]
 	path = plugins
-	url = git@github.com:PicGuard/super_native_extensions.git
+	url = https://github.com/PicGuard/super_native_extensions.git
