--- a/macos/Runner/AppStore-Release.entitlements
+++ b/macos/Runner/AppStore-Release.entitlements
@@ -8,6 +8,8 @@
 	<string>43V9N6VW8L</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 	<key>com.apple.security.inherit</key>
