--- a/.github/workflows/test-linux-appimage-free-arm64.yml
+++ b/.github/workflows/test-linux-appimage-free-arm64.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: Build AppImage
         run: |
+          export SENTRY_NATIVE_BACKEND=breakpad
           fastforge package \
             --skip-clean \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
