--- a/.github/workflows/test-linux-deb-free.yml
+++ b/.github/workflows/test-linux-deb-free.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Build deb
         run: |
+          export SENTRY_NATIVE_BACKEND=breakpad
           fastforge package \
             --skip-clean \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
