--- a/.github/workflows/test-linux-deb-pro.yml
+++ b/.github/workflows/test-linux-deb-pro.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Build deb
         run: |
+          export SENTRY_NATIVE_BACKEND=breakpad
           fastforge package \
             --skip-clean \
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" \
