--- a/.github/workflows/test-linux-tar-free.yml
+++ b/.github/workflows/test-linux-tar-free.yml
@@ -45,7 +45,9 @@ jobs:
         uses: bluefireteam/melos-action@v3
 
       - name: Build flutter
-        run: flutter build linux --dart-define-from-file=.env --target lib/main_free.dart
+        run: |
+          export SENTRY_NATIVE_BACKEND=breakpad
+          flutter build linux --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Set version
         id: version_step
