--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -347,7 +347,9 @@ jobs:
         uses: bluefireteam/melos-action@v3
 
       - name: Build flutter
-        run: flutter build linux --dart-define-from-file=.env --target lib/main_free.dart
+        run: |
+          export SENTRY_NATIVE_BACKEND=breakpad
+          flutter build linux --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Build tar
         run: |
