--- a/snap/snapcraft-pro.yaml
+++ b/snap/snapcraft-pro.yaml
@@ -80,12 +80,13 @@ parts:
       # rm -f "$PG_FLUTTER_BUILD_DIR/engine/src/.gn"
       flutter doctor -v
       flutter precache --linux
-      dart pub global activate melos
       
       cp "$(pwd)/linux/pro/CMakeLists.txt" "$(pwd)/linux/CMakeLists.txt"
       cp "$(pwd)/linux/pro/my_application.cc" "$(pwd)/linux/runner/my_application.cc"
       
+      dart pub global activate melos
       melos bootstrap
       
+      export SENTRY_NATIVE_BACKEND=breakpad
       flutter build linux --release --dart-define-from-file=.env --target $FLUTTER_TARGET
       cp -r build/linux/*/release/bundle/* $CRAFT_PART_INSTALL/
