--- a/macos/Podfile
+++ b/macos/Podfile
@@ -3,7 +3,7 @@ platform :osx, '11.0'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-project 'PicGuardMac', {
+project 'PicGuard', {
   'Debug-free' => :debug,
   'Debug-pro' => :debug,
   'Profile-free' => :release,
@@ -29,12 +29,12 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_macos_podfile_setup
 
-target 'PicGuardMac' do
+target 'PicGuard' do
   use_frameworks!
   use_modular_headers!
 
   flutter_install_all_macos_pods File.dirname(File.realpath(__FILE__))
-  target 'PicGuardMacTests' do
+  target 'PicGuardTests' do
     inherit! :search_paths
   end
 end
